# solid_robot

./: CMakeLists.txt  README.md  package.xml
launch/: gazebo.launch.py
meshes/: link1.STL  link4.STL  link5.STL
my_arm_controller/: README.md  package.xml  setup.cfg  setup.py
my_arm_controller/my_arm_controller/: arm_controller.py
solid_robot/: CMakeLists.txt  package.xml
solid_robot/config/: gz_bridge.yaml
solid_robot/launch/: display.launch.py  gazebo.launch.py
solid_robot/meshes/: base_link.STL  gripper_link.STL  left_claw_link.STL  link2.STL  link3.STL  right_claw_link.STL
solid_robot/urdf/: solid_robot.urdf.xacro  solid_robot_control.xacro  solid_robot_gazebo.xacro
solid_robot_controller/: CMakeLists.txt  package.xml
solid_robot_controller/config/: solid_robot_controllers.yaml
solid_robot_controller/launch/: controller.launch.py
solid_robot_moveit/: CMakeLists.txt  package.xml
solid_robot_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  solid_robot.srdf
solid_robot_moveit/launch/: moveit.launch.py  test.launch.py
urdf/: solid_robot.urdf.xacro
